Changed project description

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <img src="unicare.png" alt="UniCare">
           <div class="project-info">
             <h3>UniCare</h3>
-            <p>Campus AI health assistant for students. Mobile app.</p>
+            <p>A mobile app that provides a platform for students to access AI assisted health services on campus.</p>
             <!-- <a href="#" class="btn btn-secondary">View Project</a> -->
           </div>
         </div>
@@ -71,7 +71,7 @@
           <img src="swift_main.png" alt="Swift Connect">
           <div class="project-info">
             <h3>Swift Connect</h3>
-            <p>Purchase airtime, buy data, and pay for utilities. Mobile app.</p>
+            <p>A fintech mobile app that allows users to purchase airtime, buy data, and pay for utilities.</p>
             <!-- <a href="#" class="btn btn-secondary">View Project</a> -->
           </div>
         </div>
